# rusttls

./: Cargo.toml
lib/: Cargo.toml
lib/src/: aes.rs  cipher.rs  cipher_suite.rs  client.rs  codec.rs  diffie_helman.rs  eliptic_curve.rs  gcm.rs  hmac.rs  lib.rs  messages.rs  signature.rs
lib/src/cipher/: mod.rs
lib/src/digest/: mod.rs  sha256.rs  sha384.rs
lib/src/eliptic_curve/: curve25519.rs  mod.rs  secp256r1.rs
lib/src/tls/: codec.rs  messages.rs  mod.rs
testexe/: Cargo.toml
testexe/src/: main.rs
