[package]
name = "tlslib"
version = "0.1.0"
authors = ["John Daniels"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
trust-dns-resolver = "0.12.0"
bytes = "0.4.12"
rand = "0.7"
num-bigint = "0.2"
hex = "0.4.0"
num-traits = "0.2.8"
